--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/Lemur-Media-Studio/Cereals-Online/issues"
   },
-  "homepage": "https://github.com/Lemur-Media-Studio/Cereals-Online#readme"
+  "homepage": "https://github.com/Lemur-Media-Studio/Cereals-Online#readme",
+  "dependencies": {}
 }
